Adicionado conexão com banco, migration e automapper

--- a/Gst/appsettings.json
+++ b/Gst/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "GstConnection" : "server=localhost;database=gst;user=root;password=root"
+  }
 }
